# newtype

./: .clang-format  CMakeLists.txt  LICENSE  README.md
core/: CMakeLists.txt
core/include/Common/newtype/: application_base.hpp  core.hpp  pch.hpp  renderer_base.hpp  window_base.hpp
core/include/Common/newtype/core/: application_base.hpp  core.hpp  pch.hpp  renderer_base.hpp  window_base.hpp
core/include/Common/newtype/core/common/: pch.hpp
core/include/Windows/newtype/: window.hpp
core/include/Windows/newtype/core/: window.hpp
core/include/Windows/newtype/core/platform/: pch.hpp
core/include/Windows/newtype/platform/: library.hpp  pch.hpp
core/include/newtype/: application_base.hpp  core.hpp  renderer_base.hpp  window_base.hpp
core/include/newtype/core/: library.hpp  pch.hpp
core/src/: application_base.cpp  core.cpp  renderer_base.cpp  window_base.cpp
core/src/Common/: application_base.cpp  core.cpp  pch.cpp  renderer_base.cpp  window_base.cpp
core/src/Common/core/: application_base.cpp  core.cpp  pch.cpp  renderer_base.cpp  window_base.cpp
core/src/Common/core/common/: pch.cpp
core/src/Windows/: window.cpp
core/src/Windows/core/: window.cpp
core/src/Windows/core/platform/: library.cpp  pch.cpp
core/src/Windows/platform/: library.cpp  pch.cpp
core/src/core/: library.cpp  pch.cpp
opengl/: CMakeLists.txt
opengl/include/Common/newtype/opengl/: opengl.hpp  renderer.hpp
opengl/include/Common/newtype/opengl/common/: pch.hpp
opengl/include/Windows/newtype/opengl/: loader.hpp
opengl/include/Windows/newtype/opengl/platform/: library.hpp  pch.hpp
opengl/src/Common/opengl/: opengl.cpp  renderer.cpp
opengl/src/Common/opengl/common/: pch.cpp
opengl/src/Windows/opengl/: loader.cpp
opengl/src/Windows/opengl/platform/: library.cpp  pch.cpp
platform/: CMakeLists.txt
platform/Windows/: CMakeLists.txt
platform/Windows/include/newtype/: window.hpp
platform/Windows/include/newtype/platform/: library.hpp
platform/Windows/src/: window.cpp
platform/Windows/src/platform/: library.cpp  pch.cpp
